--- a/frontend/src/app/features/Producto/pages/product-form/product-form.component.html
+++ b/frontend/src/app/features/Producto/pages/product-form/product-form.component.html
@@ -1,65 +1,116 @@
+<!-- Toast Container: posición fija en la esquina inferior derecha -->
+<div class="position-fixed top-50 start-50 translate-middle p-3" style="z-index: 11;">
+  <div id="registroToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+    <div [class]="clase">
+      <strong class="me-auto">Notificación</strong>
+      <small>Ahora</small>
+      <button type="button" class="btn-close btn-close-white" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+    <div class="toast-body">
+    </div>
+  </div>
+</div>
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de Inventario</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Formulario de Inventario</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
 
-<div class="container mt-4">
-    <h2 class="mb-4">Formulario de Inventario</h2>
-    <form>
-        <div class="mb-3">
-            <label for="codigoProducto" class="form-label">Código del Producto (SKU)</label>
-            <input type="text" class="form-control" id="codigoProducto" placeholder="Ingrese el código único">
-        </div>
+  <div class="container mt-4">
+    <h2 class="mb-4">Formulario de {{titulo}} Inventario</h2>
+    <form [formGroup]="formInventario" (ngSubmit)="addproducto()">
+      <div class="mb-3">
+        <label for="fechaIngreso" class="form-label">Fecha de Creacion</label>
+        <input formControlName="createdAt" type="date" class="form-control" id="fechaIngreso">
+      </div>
 
-        <div class="mb-3">
-            <label for="nombreProducto" class="form-label">Nombre del Producto</label>
-            <input type="text" class="form-control" id="nombreProducto" placeholder="Ingrese el nombre">
-        </div>
+      <div class="mb-3">
+        <label for="codigoProducto" class="form-label">Código del Producto (SKU)</label>
+        <input formControlName="codigo" type="text" class="form-control" id="codigoProducto"
+          placeholder="Ingrese el código único">
+        <span *ngIf="formInventario.get('codigo')?.hasError('required') && formInventario.get('codigo')?.touched"
+          class="text-danger">
+          El campo <strong>código</strong> es requerido.
+        </span>
+      </div>
 
-        <div class="mb-3">
-            <label for="descripcion" class="form-label">Descripción</label>
-            <textarea class="form-control" id="descripcion" rows="3" placeholder="Detalles opcionales"></textarea>
-        </div>
+      <div class="mb-3">
+        <label for="nombreProducto" class="form-label">Nombre del Producto</label>
+        <input formControlName="nombre" type="text" class="form-control" id="nombreProducto"
+          placeholder="Ingrese el nombre">
+        <span *ngIf="formInventario.get('nombre')?.hasError('required') && formInventario.get('nombre')?.touched"
+          class="text-danger">
+          El campo <strong>nombre</strong> es requerido.
+        </span>
+      </div>
 
-        <div class="mb-3">
-            <label for="stockInicial" class="form-label">Stock Inicial</label>
-            <input type="number" class="form-control" id="stockInicial" placeholder="Ingrese la cantidad inicial">
-        </div>
+      <div class="mb-3">
+        <label for="descripcion" class="form-label">Descripción</label>
+        <textarea formControlName="descripcion" class="form-control" id="descripcion" rows="3"
+          placeholder="Detalles opcionales"></textarea>
+        <span
+          *ngIf="formInventario.get('descripcion')?.hasError('required') && formInventario.get('descripcion')?.touched"
+          class="text-danger">
+          El campo <strong>descripcion</strong> es requerido.
+        </span>
+      </div>
 
-        <div class="mb-3">
-            <label for="precioCompra" class="form-label">Precio de Compra</label>
-            <input type="number" class="form-control" id="precioCompra" placeholder="Ingrese el precio de compra">
-        </div>
+      <div class="mb-3">
+        <label for="stockInicial" class="form-label">Stock Inicial</label>
+        <input formControlName="stock_inicial" type="number" class="form-control" id="stockInicial"
+          placeholder="Ingrese la cantidad inicial">
+        <span
+          *ngIf="formInventario.get('stock_inicial')?.hasError('required') && formInventario.get('stock_inicial')?.touched"
+          class="text-danger">
+          El campo <strong>stock inicial</strong> es requerido.
+        </span>
+      </div>
 
-        <div class="mb-3">
-            <label for="precioVenta" class="form-label">Precio de Venta</label>
-            <input type="number" class="form-control" id="precioVenta" placeholder="Ingrese el precio de venta">
-        </div>
+      <div class="mb-3">
+        <label for="precioCompra" class="form-label">Precio de Compra</label>
+        <input formControlName="compra" type="number" class="form-control" id="precioCompra"
+          placeholder="Ingrese el precio de compra" (input)="formatNumber($event,'compra')">
+        <span *ngIf="formInventario.get('compra')?.hasError('required') && formInventario.get('compra')?.touched"
+          class="text-danger">
+          El campo <strong>Precio de compra</strong> es requerido.
+        </span>
+      </div>
 
-        <div class="mb-3">
-            <label for="fechaIngreso" class="form-label">Fecha de Ingreso</label>
-            <input type="date" class="form-control" id="fechaIngreso">
-        </div>
+      <div class="mb-3">
+        <label for="precioVenta" class="form-label">Precio de Venta</label>
+        <input formControlName="venta" type="number" class="form-control" id="precioVenta"
+          placeholder="Ingrese el precio de venta" (input)="formatNumber($event,'venta')">
+        <span *ngIf="formInventario.get('venta')?.hasError('required') && formInventario.get('venta')?.touched"
+          class="text-danger">
+          El campo <strong>Precio de venta</strong> es requerido.
+        </span>
+      </div>
 
-        <div class="mb-3">
-            <label for="estado" class="form-label">Estado</label>
-            <select class="form-select" id="estado">
-                <option value="disponible">Disponible</option>
-                <option value="agotado">Agotado</option>
-                <option value="proximo_vencer">Próximo a vencer</option>
-                <option value="revision">En revisión</option>
-            </select>
-        </div>
 
-        <button type="submit" class="btn btn-primary">Guardar</button>
-        <button type="reset" class="btn btn-secondary">Limpiar</button>
+
+      <!-- <div class="mb-3">
+        <label for="estado" class="form-label">Estado</label>
+        <select class="form-select" id="estado">
+          <option value="disponible">Disponible</option>
+          <option value="agotado">Agotado</option>
+          <option value="proximo_vencer">Próximo a vencer</option>
+          <option value="revision">En revisión</option>
+        </select>
+      </div> -->
+      <div class="d-flex gap-3">
+        <button type="reset" class="btn btn-secondary" (click)="volver()">Volver</button>
+        <button [disabled]="!formInventario.invalid" type="submit" class="btn btn-primary">{{titulo}}</button>
+      </div>
+      <br>
     </form>
-</div>
+  </div>
 
 </body>
+
 </html>
