--- a/frontend/src/app/features/Producto/pages/product-list/product-list.component.html
+++ b/frontend/src/app/features/Producto/pages/product-list/product-list.component.html
@@ -1,1 +1,1 @@
-<app-product-table [productos]="productos_filtrados"></app-product-table>
+<app-product-table [productos]="productos_filtrados" (productoEliminado)="cargarProductos()"></app-product-table>
